# api-python-releases

./: .coveragerc  .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini
app/: __init__.py  app.py  app_config.py  main.py
app/controllers/: delete_controller.py  get_controller.py  insert_controller.py  update_controller.py
app/entities/: release.py
app/repositories/: delete_version_repository.py  insert_version_repository.py  load_version_repository.py  update_version_repository.py
app/repositories/db/: db_helper.py
app/utils/: output_formatter.py
src/app/repositories/db/: db-connect.py
test/repositories/: conftest.py  test_delete_version_repository.py  test_insert_version_repository.py  test_load_version_repository.py  test_update_version_repository.py
test/utils/: test_output_formatter.py
