[tool.poetry]
name = "api-releases"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^4.2.0"
dnspython = "^2.2.1"
coverage = "^6.4.4"
pymongo-inmemory = "^0.2.8"
mongomock = "^4.1.2"
fastapi = "^0.79.1"
uvicorn = "^0.18.2"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
